--- a/static/assignment564/fe564.Rmd
+++ b/static/assignment564/fe564.Rmd
@@ -43,27 +43,27 @@ sqrt(1.395*B[3,3])
 (1.395*B[3,5])/((sqrt(1.395*B[3,3]))*(sqrt(1.395*B[5,5])))
 ```
 
-(a) If MSE = 1.395 and n = 38 , compute the 
+(a). If MSE = 1.395 and n = 38 , compute the 
 
- (i)
+   (i)
 
 $$se(\mathbf{\hat\beta_4})=\sqrt{MSE\times C_{55}}=\sqrt{1.395\times0.069}=0.3102499$$
 
- (ii)
+   (ii)
 
 $$Cov(\mathbf{\hat\beta_2,\hat\beta_4})=MSE\times C_{35}=1.395\times(-0.035)=-0.048825$$
 
- (iii)
+   (iii)
 
 $$se(\mathbf{\hat\beta_2})=\sqrt{MSE\times C_{33}}=\sqrt{1.395\times0.067}=0.3057205$$
 
 $$Cor(\mathbf{\hat\beta_2,\hat\beta_4})=\frac{Cov(\mathbf{\hat\beta_2,\hat\beta_4})}{se(\mathbf{\hat\beta_2})se(\mathbf{\hat\beta_4})}=\frac{-0.048825}{0.3057205\times0.3102499}=-0.5147615$$
 
- (iv)
+   (iv)
 
 $C_{66}=0.058$ has the smallest value. $\hatβ_5$ has the the least variance and is the most consistent among the estimators.
 
- (v)
+   (v)
 
 According to the $(X'X)^{(-1)}$, $C_{13},\ C_{17},\ C_{24},\ C_{25},\ C_{67}$ are positive. 
 
@@ -72,9 +72,9 @@ Therefore, the positively correlated pairs of parameters are
 $$\hatβ_0\ \&\ \hatβ_2,\quad \hatβ_0\ \&\ \hatβ_6,\quad \hatβ_1\ \&\ \hatβ_3,\quad \hatβ_1\ \&\ \hatβ_4,\quad \hatβ_5\ \&\ \hatβ_6$$
 
 
-(b) Consider the following hypothesis: $H_0:  β_1=2β_3,β_2=β_3,β_5=0$
+(b). Consider the following hypothesis: $H_0:  β_1=2β_3,β_2=β_3,β_5=0$
 
- (i)
+   (i)
 
 $$
 \mathbf{T}=\begin{bmatrix} 0 & 1 & 0 & -2 & 0 & 0& 0 \\ 0 & 0 & 1 & -1 & 0 & 0 & 0\\ 0 & 0 & 0 & 0 & 0 & 1 & 0 \end{bmatrix}_{3\times7} 
@@ -82,7 +82,7 @@ $$
 \mathbf{C}=\begin{bmatrix} 0 \\ 0 \\ 0\end{bmatrix}_{3\times1} rank(T)=3
 $$
 
- (ii)
+   (ii)
 
 In this hypothesis, $y=β_0+2β_3x_1+β_3x_2+β_3x_3+β_4x_4+0x_5+β_6x_6+ε=β_0+β_3(2x_1+x_2+x_3)+β_4x_4+β_6x_6+ε$
 
@@ -95,7 +95,7 @@ In this conceptual form, the numerator degrees of freedom is $\nu_1=3$, denomina
 After transformed to a colsed form, The numerator is 31, denominator is 3.
 
 
-(c)
+(c).
 
 $$SSR=\sum_{i=1}^n(\hat y_i-\bar y)^2=\sum_{i=1}^n(\hat y_i^2-2\hat y_i\bar y+\bar y^2)=\sum_{i=1}^n\hat y_i^2-2\bar y\sum_{i=1}^n\hat y_i+\sum_{i=1}^n\bar y^2$$
 
@@ -347,7 +347,7 @@ where the dependent variables can either be total storm flow volume ($Q_t$) in m
 
 Inspired by this theory, I divided the variables to 4 groups:
 
-|      P      |    F    |    Q    
+|      P      |    F    |    | Q    
 |     ----    |  ----   | --------------- | -----------------
 |Precipitation|   Time  | Terrain |Surface
 |      x8     |     x9  |x1: Area of watershed ($mi^2$) |x2: Area impervious to water ($mi^2$)
@@ -359,8 +359,8 @@ It is resonable that the best model should contains at least one variable in eac
 
 - Log and interaction
 
-|Transform| interact | Eliminate  |      	model        |number of perdictors|number of vairbales|R-squared
-|  ----   |    ----  |   ------   | ------------------ |  -------           |  -------          |----
+|Transform| interact | Eliminate  |      	model        |number of perdictors|number of variables|R-squared
+|  ----   |    ----  |   ------   | ------------------ |  --------        |  --------         |----
  ln(all)  |    no    |stepboth p  | ln(X4)             |  1                 | 1                 | 0.910  
   ln(y)   |    no    |Backward AIC|X3,X4,X6,X7,X8,X9   |  6                 | 6                 | 0.947
  ln(all)  |    no    |stepboth AIC|ln(X1),ln(X3),ln(X6),ln(X8),ln(X9)|    5 |  5                | 0.984   
@@ -371,7 +371,7 @@ It is resonable that the best model should contains at least one variable in eac
   ln(y)   |   yes    |Backward AIC|omitted             |15                  | 9                 | 0.994
  ln(all)  |   yes    |Backward AIC| omitted            |  22                | 9                 | 0.998 
 
-It is obviously that the model of all-log with interaction is overfitting. Therefore, we should control the number of predictors. Since there are 6 predictors by elimination regression. A new model with higher R-squared and less than 7 predictors is better than the solution in question (7). After comparing other coefficients and plots, the The best model should be 1-3-6-8-9 all-log model.
+It is obviously that the model of all-log with interaction is overfitting. Therefore, we should control the number of predictors. Since there are 6 predictors by elimination regression. A new model with higher R-squared and less than 7 predictors is better than the solution in question (7). After comparing other coefficients and plots, the best model should be 1-3-6-8-9 all-log model.
 
 
 $$\hat{\ln(y)}=5.87592+0.68118\ln(X_1)+0.37527\ln(X_3)-0.33576\ln(X_6)+1.72493\ln(X_8)-1.45653\ln(X_9)$$
